IMPROV: Improve code